# arrayops

./: .coverage  .gitignore  Cargo.toml  README.md  benchmark_lists.py  benchmark_numpy.py  pyproject.toml  requirements-docs.txt
.github/workflows/: CI.yml  publish.yml  security.yml
arrayops/: __init__.py  _arrayops.pyi
docs/: API_STABILITY.md  CHANGELOG.md  PARALLEL_OVERHEAD.md  PERFORMANCE_OPTIMIZATION.md  README.md  api.md  comparison-lists.md  comparison-numpy.md  comparison-polars.md  conf.py  design.md  index.rst  performance.md  security.md  troubleshooting.md
docs/developer-guide/: coverage.md  design.md  security.md
docs/getting-started/: index.md
docs/promotion/: README.md  hackernews-intro-post.md  linkedin-intro-post.md  reddit-intro-post.md  reddit-python-rules.md
docs/promotion/assets/: visual-content-guide.md
docs/promotion/audiences/: data-engineers.md  performance-engineers.md  students-educators.md  systems-programmers.md
docs/promotion/content/: benchmark-content.md  blog-post-templates.md  comparison-articles.md  tutorial-content.md  (+1 more)
docs/user-guide/: api.md  examples.md  index.rst  performance.md  troubleshooting.md
scripts/: benchmark_accurate.py  benchmark_lists.py  benchmark_numpy.py  benchmark_polars.py  benchmark_polars_parallel.py  benchmark_verify.py  lint.sh
src/: buffer.rs  iterator.rs  lazy.rs  lib.rs  types.rs  validation.rs
src/operations/: basic.rs  elementwise.rs  manipulation.rs  slice.rs  stats.rs  transform.rs
tests/: test_basic.py  test_import_error.py  test_iterator.py  test_module_init.py  test_security.py
